--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             class="quick_request_name"
           />
           <input
-            type="text"
+            type="tel"
             placeholder="Ваш телефон"
             class="quick_request_phone"
           />
@@ -44,12 +44,12 @@
             class="quick_request_name"
           />
           <input
-            type="text"
+            type="tel"
             placeholder="Ваш телефон"
             class="quick_request_phone"
           />
           <input
-            type="text"
+            type="email"
             placeholder="Ваша почта"
             class="quick_request_mail"
           />
